[package]
name = "ff-particles"
version = "0.1.1"
authors = ["Fedor Logachev <not.fl3@gmail.com>", "Ole A. Sjo Fasting <oasf@polygo.no>"]
homepage = "https://github.com/olefasting/ff_particles"
repository = "https://github.com/olefasting/ff_particles"
readme = "README.md"
edition = "2018"
license = "MIT/Apache-2.0"
keywords = ["gamedev", "macroquad", "serde"]
categories = ["game-development"]
description = """
Particle system for the Fish Fight project. A fork of macroquad-particles
"""

[dependencies]
macroquad = { version = "0.3" }
nanoserde = { version = "0.1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
