[package]
name = "ff-particles"
version = "0.1.2"
authors = ["Fedor Logachev <not.fl3@gmail.com>", "Ole A. Sjo Fasting <oasf@polygo.no>"]
homepage = "https://github.com/fishfight/ff-particles"
repository = "https://github.com/fishfight/ff-particles"
readme = "README.md"
edition = "2021"
license = "MIT/Apache-2.0"
keywords = ["gamedev", "macroquad", "serde"]
categories = ["game-development"]
description = """
A fork of macroquad-particles with serde support
"""

[dependencies]
macroquad = { version = "0.3" }
nanoserde = { version = "0.1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
